# icsd

./: .gitignore  .mydotfiles  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  Notes.docx  Readme.md  coverage.xml  environment.yml  icsd2d_class.py  icsd3d_class.py  icsd_class.py  log.md  pyproject.toml  requirements.txt  requirements_packaging.txt  run_examples.py  setup.cfg  setup.py
.github/workflows/: badge.yml  documentation.yml  draft-pdf.yml  main.yml  sphinx_doc.yml  tests_package.yml
3dinv_2dplot/: 2d.bms  2d3d.py  README.md  dd2.shm  negResp-Atts.vector  negResp.bms  negResp.vtk  resp.vec  respRez.vec
_sphinx_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_sphinx_build/.doctrees/: index.doctree
_sphinx_build/_modules/: index.html
_sphinx_build/auto_examples/: index.html  (+2 more)
description/: Description.aux  Description.fdb_latexmk  Description.tex
doc/: conf.py  index.rst
docs/: conf.py  index.rst  make.bat  requirements.txt
docsrc/: build-doc.sh  conf.py  requirements.txt
env/: requirements.txt  requirements_doc.txt
examples/: README.rst  run_landfill3d.py  run_nail.py
examples_inPrep/: run_example_fig7.py
icsd/: __init__.py  icsd3d.py  meta.yaml  newfcts_toadd.py  utilities.py
icsd.egg-info/: PKG-INFO  SOURCES.txt
icsd3d/: icsd3d_class.py
lib/: icsd3d.py
malm_sequences/: Rhi_204.py
old_others/: ParetoPlot.py  VRTe_Rhi.py  mkMALMseqLab.py  mkMatrix.py  pest_check.py  py_iCSD.py
paper/: paper.bib  paper.bib~2  paper.md
tests/: test_icsd3d.py  test_plot.py
(+360 files in other folders)
