[metadata]
name = icsd
description = 'Inversion of current source density'
long_description = file: README.md, CHANGELOG.md, LICENSE.md
author='Luca Peruzzo, Benjamin Mary'
author_email=<benjamin.mary@unipd.it>
keywords = inversion, MALM
license = BSD 3-Clause License

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    

exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,

[options]
zip_safe = True
include_package_data = False
packages = find:     
python_requires = >=3.7
install_requires =
    numpy<1.23.0,>=1.16.5
    scipy
    kneed
    
     
